[package]
name = "new_api_4"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.7", features = ["mysql", "runtime-tokio", "macros"] }

tokio = { version = "1", features = ["full"] }

bcrypt = "0.15"
jsonwebtoken = "9"
chrono = "0.4"
dotenvy = "0.15"
futures-util = "0.3"



